# VisualX86

./: README.md
src/: .gitignore  Dockerfile  DockerfileQuick  Readme.md  clean.sh  quick_run.sh  run.sh  rust_build.sh
src/model/: Cargo.toml
src/model/src/: alu.rs  assembler_mc.rs  clisimulator.rs  decoder.rs  instruction.rs  ju.rs  lib.rs  main.rs  mainmemory.rs  microcode_types.rs  mu.rs  operand.rs  operator.rs  parser_types.rs  predecoder.rs  register.rs  scannerless_parser.rs  simulator.rs
src/model/tests/sample_programs/: sample1.txt  sample2.txt  sample3.txt  testcmp.txt  testmem.txt
src/web/: Readme.md  index.js
src/web/static/: compose_diagram_funcs.js  draw_diagram_funcs.js  help.html  home.html  myScript.js  mystyle.css
src/web/static/sample_programs/: factorial.txt  fibonacci.txt  power.txt
